# WebScout-core

./: .gitignore  Cargo.toml  README.md  index.json  log.txt  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml  ws.msgpk  ws.ron
benches/: benchmarks.rs
data/: BlogHealth.txt  RandomWord.txt  WordKraft.txt  allchars.txt  food.txt  rule.txt  subdue.txt
packs/: ast.pack  bg.pack  ca.pack  cs.pack  cy.pack  de.pack  en.pack  es.pack  et.pack  fa.pack  fr.pack  ga.pack  gd.pack  gl.pack  gv.pack  hu.pack  it.pack  pt.pack  ro.pack  ru.pack  sk.pack  sl.pack  sv.pack  uk.pack
src/: document.rs  index.rs  jaro.rs  lib.rs  main.rs  package.json  pairset.rs  parser.rs  query.rs  tokenizer.rs  types.rs  utils.rs
tokenizers/: ca.pack  cs.pack  cy.pack  es.pack  et.pack  fr.pack  gl.pack  it.pack  ru.pack  sl.pack
ts/: index.ts  webscout.ts
worker/: index.ts  scout.ts
