[package]
name = "fuse"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
[dependencies]
serde = { version = "1.0", features = ["derive"] }
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
rmp-serde = "1.1.1"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
flexbuffers = "2.0.0"
gnuplot = "0.0.37"
crc32fast = "1.3.2"
flate2 = "1.0.25"
itertools = "0.10.5"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",              
    "fast-rng",          
    "macro-diagnostics", 
]
[profile.release]
opt-level = "s"

[dev-dependencies]
criterion = "0.4.0"


