[package]
name = "webscout"
version = "0.1.0"
authors = ["Yassine AMAGHZAZ <yassine.amaghzaz@outlook.com>"]
description = "Serverless site search built on top of Cloudlfare Workers"
license = "MIT/Apache-2.0"
repository = "https://github.com/AMAGHZAZ-Y/webscout"
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]
[features]
default = ["console_error_panic_hook"]
[dependencies]
serde = { version = "1.0", features = ["derive"] }
cfg-if = "0.1.2"
serde_json = "1.0.67"
rmp-serde = "1.1.1"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
crc32fast = "1.3.2"
wasm-bindgen="0.2"
patricia_tree = { version= "0.5.5", features=["serde"] }
hashbrown = {version = "0.13.2", features=["serde"]}
regex = "1.7.1"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",              
    "fast-rng",          
    "macro-diagnostics", 
]

[profile.release]
opt-level = 3
debug = 0
overflow-checks = false
lto = true
[dev-dependencies]
criterion = {version = "0.4.0", features= ["html_reports"]}
reqwest = "0.11.16"
[[bench]]
name = "benchmarks"
harness = false

